--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["studentdetailscol", "Updatestudent"]
+  "cSpell.words": ["Handlemobile", "studentdetailscol", "Updatestudent"]
 }
