--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "ngx-pagination": "^6.0.2",
     "pagination": "^0.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
