--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["Handlemobile", "studentdetailscol", "Updatestudent"]
+  "cSpell.words": [
+    "Handlemobile",
+    "Inputemail",
+    "Inputpassword",
+    "studentdetailscol",
+    "Updatestudent"
+  ]
 }
